--- a/verk-4/styles.css
+++ b/verk-4/styles.css
@@ -45,6 +45,7 @@ html {
   --border-width: 1px;
   --border-radius-regular: 5px;
   --border-radius-image: 10px;
+  --border-regular: 1px solid black;
 
   /* Litir */
   /** Litir með nafni **/
@@ -71,7 +72,7 @@ html {
 
 /*** Grunnstærð er 16px ***/
 html {
-  font-size: 16px;
+  font-size: var(--font-base-size);
 }
 
 /*** Leturgerðir sem við sækjum úr fonts/ möppu ***/
@@ -153,17 +154,16 @@ a {
 
 header {
   padding: 1em 1.5em;
-  background-color: #cc99bb;
+  background-color: var(--color-purple);
   text-align: center;
+  border-bottom: var(--color-purple-dark) 4px solid;
 }
 
 /** Valmynd **/
 
 nav {
-  margin-bottom: 1rem;
+  margin-bottom: var(--spacing);
   padding: 1rem 6rem;
-  
-
   width: 300px;
   text-wrap: nowrap;
 }
@@ -199,7 +199,7 @@ nav ul li {
 .content {
   display: flex;
   flex-direction: column;
-  max-width: 900px;
+  max-width: var(--max-width);
 }
 
 .section-box {
@@ -207,13 +207,22 @@ nav ul li {
   justify-content: space-between;
 }
 
-.section-box section {
-  border: black solid 1px;
-  
+.efri-card {
+  border: var(--border-regular);
+  border-radius: var(--border-radius-regular);
   width: 48%;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  padding: calc(var(--spacing) / 2);
+}
+
+.texti-og-takkar {
+  border: var(--border-regular);
+  border-top: 0px;
+  border-bottom-left-radius: var(--border-radius-regular);
+  border-bottom-right-radius: var(--border-radius-regular);
+  padding: calc(var(--spacing) / 2);
+
 }
 
 .button-box {
@@ -223,28 +232,73 @@ nav ul li {
 
 .vin-spilin {
   text-align: center;
-  margin-bottom: 1rem;
+}
+
+.texta-box {
+  padding-top: var(--spacing);
 }
 
 main {
   margin: 0 auto 2em auto;
-  padding: 1rem;
+  padding: var(--spacing);
   width: 100%;
-  max-width: 1200px;
-  width: 900px;
+  max-width: var(--max-width);
 }
 
 main p,
 main section {
-  margin-bottom: 1rem;
+  margin-bottom: var(--spacing);
 }
 
-main img {
-  float: right;
-  margin-left: 1rem;
-  margin-bottom: 1rem;
-  max-width: 300px;
-  border-radius: 10px;
+.efsta-mynd {
+  margin-left: var(--spacing);
+  margin-bottom: spacing;
+  max-width: var(--max-width-image);
+  border-radius: var(--border-radius-image);
+}
+
+/** Cards **/
+
+.cards {
+  display: flex;
+  flex-direction: column;
+  gap: var(--spacing);
+}
+
+.cards > .title {
+  width: 100%;
+  text-align: center;
+}
+
+.cards > .content {
+  display: flex;
+  justify-content: center;
+  gap: calc(var(--spacing) * 2);
+  flex-wrap: wrap;
+  width: 100%;
+}
+
+/** Card **/
+
+.card {
+  display: flex;
+  flex-direction: column;
+  width: calc(50% - var(--spacing));
+}
+
+.card > .image {
+  width: 100%;
+}
+
+.card > .image img {
+  display: block;
+
+  border-top-left-radius: var(--border-radius-regular);
+  border-top-right-radius: var(--border-radius-regular);
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
+  object-position: 50% 50%;
 }
 
 /** Fótur **/
@@ -254,13 +308,16 @@ footer {
   border-top: 4px solid #cc99bb;
   background-color: #eebbdd;
   text-align: center;
+  display: flex;
+  justify-content: center;
 }
 
 footer > section {
-  display: inline-block;
+  display: flex;
   vertical-align: top;
   max-width: 250px;
   margin-right: 2em;
+  flex-direction: column;
 }
 
 footer ul {
@@ -307,7 +364,7 @@ table tr td:last-child {
 }
 
 table tbody tr:nth-child(2n + 1) {
-  background-color: #eebbdd;
+  background-color: var(--color-purple);
 }
 
 table img {
@@ -321,161 +378,75 @@ table td:last-child {
 
 /** Viðburðir **/
 
-.event {
-  clear: left;
-
-  width: 100%;
-  margin-bottom: 2rem;
-}
-
-.event .title {
-  margin-bottom: 1rem;
-}
-
-.event .content {
-  width: 100%;
-}
-
-.event img {
-  float: left;
-
-  margin-right: 1rem;
-  margin-bottom: 1rem;
-}
-
-.event .register {
-  clear: both;
+.vidburdir-content {
+  display: flex;
+  flex-direction: row;
+  gap: var(--spacing);
 }
 
 /** Skráningarform **/
 
 fieldset {
-  margin-bottom: 1rem;
+  margin-bottom: var(--spacing);
   border: 0;
 }
 
 fieldset legend {
-  margin-bottom: 1rem;
-  font-size: 1.5rem;
+  margin-bottom: var(--spacing);;
+  font-size: calc(var(--font-size-headings) * 1.5);
 }
 
 fieldset div {
   width: 100%;
   max-width: 400px;
-  margin-bottom: 1rem;
-}
-
-fieldset div label {
-  display: block;
 }
 
 fieldset input,
 fieldset select,
 fieldset textarea {
-  padding: 0.5rem;
+  padding: calc(var(--spacing) / 2);
   width: 100%;
-  border: 1px solid #000000;
+  border: var(--border-regular);
 
-  background-color: #ffffff;
+  background-color: var(--color-white);
 }
 
 fieldset input[type='checkbox'] {
-  display: inline-block;
-  margin-right: 0.5rem;
+  margin-right: calc(var(--spacing) / 2);
   width: auto;
 }
 
 button {
-  display: inline-block;
-  padding: 0.5rem 1rem;
+  padding: calc(var(--spacing) / 2) var(--spacing);
   border-radius: 5px;
   border-width: 1px;
-  background-color: #eebbdd;
+  background-color: var(--color-purple);
 }
 
-/** Cards **/
-
-.cards {
+.skraning-content {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   gap: var(--spacing);
-}
-
-.cards > .title {
-  width: 100%;
-  text-align: center;
-}
-
-.cards > .content {
-  display: flex;
-  justify-content: center;
-  gap: calc(var(--spacing) * 2);
   flex-wrap: wrap;
-
-  width: 100%;
 }
 
-/** Card **/
-
-.card {
-  display: flex;
-  flex-direction: column;
-
-  /* hér verðum við að reikna út breidd svo að flex-wrap virki */
-  width: calc(50% - var(--spacing));
-}
-
-.card > .image {
-  width: 100%;
-}
-
-.section > .image img {
-  display: block;
-
-  border-top-left-radius: var(--border-radius-regular);
-  border-top-right-radius: var(--border-radius-regular);
-  width: 100%;
-  height: 300px;
-  object-fit: cover;
-  object-position: 50% 50%;
-}
-/**
-.card > .content {
-  flex: 1;
-
-  display: flex;
-  flex-direction: column;
-  gap: var(--spacing);
-
-  padding: calc(var(--spacing) / 2);
-  border: var(--border-regular);
-  border-top: 0;
-  border-bottom-left-radius: var(--border-radius-regular);
-  border-bottom-right-radius: var(--border-radius-regular);
-}
-**/
-/**
- * notum nýja selectora! brotið niður
- * .card            <- veljum öll .card
- * :not(            <- nema, við viljum ef _ekki_...
- *   :has(> .image) <- .image sem strangt barn .card
- * )                <- endir á :not()
- * > .content       <- sem er strax barn af .card
- * Þ.e.a.s. fyrir .card sem hefur ekki .image, setja border + radíus á allt .content
- */
-.card:not(:has(> .image)) > .content {
+.label-box {
   border: var(--border-regular);
   border-radius: var(--border-radius-regular);
-}
-
-.card > .content > .text {
-  flex: 1;
-}
-
-.card > .content > .actions {
+  height: 100%;
   display: flex;
-  justify-content: space-between;
-  gap: var(--spacing);
-
-  margin-top: var(--spacing);
+  flex-direction: column;
 }
+
+.label-box:has(> .button-box) {
+  justify-content: space-between;
+}
+
+.form-box {
+  width: 48%;
+}
+
+.label-box div {
+  padding: calc(var(--spacing) / 2);
+}
+
