--- a/verk-4/styles.css
+++ b/verk-4/styles.css
@@ -190,6 +190,11 @@ nav ul li {
   gap: calc(var(--spacing) * 2);
 }
 
+main {
+  display: flex;
+  flex-direction: column;
+}
+
 .navOgEfni {
   display: flex;
   padding-right: 5rem;
@@ -222,7 +227,9 @@ nav ul li {
   border-bottom-left-radius: var(--border-radius-regular);
   border-bottom-right-radius: var(--border-radius-regular);
   padding: calc(var(--spacing) / 2);
-
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
 }
 
 .button-box {
@@ -284,6 +291,7 @@ main section {
   display: flex;
   flex-direction: column;
   width: calc(50% - var(--spacing));
+  
 }
 
 .card > .image {
