--- a/verk-4/styles.css
+++ b/verk-4/styles.css
@@ -163,8 +163,7 @@ header {
 
 nav {
   margin-bottom: var(--spacing);
-  padding: 1rem 6rem;
-  width: 300px;
+  padding: 1rem 9rem;
   text-wrap: nowrap;
 }
 
@@ -175,7 +174,6 @@ nav ul {
 
 nav ul li {
   display: block;
-  margin-right: rem;
 }
 
 /** Meginmál og efni forsíðu **/
@@ -197,7 +195,7 @@ main {
 
 .navOgEfni {
   display: flex;
-  padding-right: 5rem;
+  padding-right: 9rem;
   flex: 1;
 }
 
@@ -243,6 +241,7 @@ main {
 
 .texta-box {
   padding-top: var(--spacing);
+  margin-bottom: var(--spacing);
 }
 
 main {
@@ -312,7 +311,7 @@ main section {
 /** Fótur **/
 
 footer {
-  padding: 1rem;
+  padding: var(--spacing);
   border-top: 4px solid #cc99bb;
   background-color: #eebbdd;
   text-align: center;
@@ -333,7 +332,7 @@ footer ul {
 }
 
 footer h2 {
-  margin-bottom: 1rem;
+  margin-bottom: var(--spacing);
 }
 
 /*** Opnunartími ***/
@@ -343,19 +342,19 @@ dt {
 }
 
 dd {
-  margin-bottom: 1rem;
+  margin-bottom: var(--spacing);
 }
 
 /** Spilasíða, töflustílar **/
 
 table {
-  margin-bottom: 1rem;
+  margin-bottom: var(--spacing);
   border-spacing: 0;
 }
 
 table th,
 table td {
-  padding: 0.5rem;
+  padding: calc(var(--spacing) / 2);
   text-align: left;
 }
 
@@ -401,7 +400,7 @@ fieldset {
 
 fieldset legend {
   margin-bottom: var(--spacing);;
-  font-size: calc(var(--font-size-headings) * 1.5);
+  font-size: calc(var(--spacing) * 1.5);
 }
 
 fieldset div {
@@ -434,7 +433,7 @@ button {
 .skraning-content {
   display: flex;
   flex-direction: row;
-  gap: var(--spacing);
+  gap: calc(var(--spacing) * 1.5);
   flex-wrap: wrap;
 }
 
@@ -451,7 +450,7 @@ button {
 }
 
 .form-box {
-  width: 48%;
+  width: 40%;
 }
 
 .label-box div {
