--- a/verk-5/styles.css
+++ b/verk-5/styles.css
@@ -338,47 +338,6 @@ main {
   margin-bottom: var(--spacing);
 }
 
-/**v 
-.efri-card {
-  border: var(--border-regular);
-  border-radius: var(--border-radius-regular);
-  width: 48%;
-  display: flex;
-  flex-direction: column;
-  padding: calc(var(--spacing) / 2);
-}
-
-.texti-og-takkar {
-  border: var(--border-regular);
-  border-top: 0px;
-  border-bottom-left-radius: var(--border-radius-regular);
-  border-bottom-right-radius: var(--border-radius-regular);
-  padding: calc(var(--spacing) / 2);
-  display: flex;
-  flex-direction: column;
-  flex-grow: 1;
-}
-
-.button-box {
-  display: flex;
-  justify-content: space-between;
-}
-
-.vin-spilin {
-  text-align: center;
-}
-
-.texta-box {
-  padding-top: var(--spacing);
-  margin-bottom: var(--spacing);
-}
-
-main p,
-main section {
-  margin-bottom: var(--spacing);
-}
-*/
-
 /*** Inngangsefni á forsíðu ***/
 
 /* TODO nota úr sýnilausn eða þinni lausn, hér þarf að aðlaga,
@@ -516,13 +475,47 @@ dd {
   margin-bottom: var(--spacing);
 }
 
-/*** Opnunartími ***/
-
-/* TODO nota úr sýnilausn eða þinni lausn */
-
 /** Spilasíða, töflustílar **/
 
-/* TODO nota úr sýnilausn eða þinni lausn */
+table {
+  margin-bottom: var(--spacing);
+  border-spacing: 0;
+}
+
+table th,
+table td {
+  padding: calc(var(--spacing) / 2);
+  text-align: left;
+}
+
+table tr th:first-child,
+table tr td:first-child {
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+}
+
+table tr th:last-child,
+table tr td:last-child {
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
+table tbody tr:nth-child(2n + 1) {
+  background-color: var(--color-purple);
+}
+
+table img {
+  width: 100%;
+  min-width: 200px;
+}
+
+table td:last-child {
+  white-space: nowrap;
+}
+
+.table-container {
+  overflow-x: auto;
+}
 
 /** Viðburðir **/
 
@@ -554,9 +547,9 @@ dd {
   max-width: 27%;
 }
 
-.button:hover {
-  color: var(--color-dark);
-  background-color: var(--color-gold);
+button:hover {
+  color: var(--color-white);
+  background-color: var(--color-black);
 }
 
 .box-efni {
@@ -580,7 +573,6 @@ dd {
   border: var(--border-regular);
   padding: calc(var(--spacing) / 2);
   border-radius: var(--border-radius-regular);
-  
 }
 
 .efsta-box img {
@@ -598,6 +590,10 @@ button {
   border-width: 1px;
   background-color: var(--color-purple);
   max-width: 40%;
+
+  transition: background-color var(--transition-time-short)
+      var(--transition-timing-function),
+    color var(--transition-time-short);
 }
 
 .texti-og-takkar {
@@ -638,4 +634,21 @@ button {
     grid-column: span 6;
     width: 100%;
   }
+}
+
+/* animation */
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
+    
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+header,
+main {
+  animation: var(--transition-time-long) var(--transition-timing-function) fade-in;
 }
