--- a/verk-5/styles.css
+++ b/verk-5/styles.css
@@ -523,7 +523,57 @@ table td:last-child {
 
 /** Skráningarform **/
 
-/* TODO nota úr sýnilausn eða þinni lausn, ætti að einfaldast með því að endurnýta .cards og .card */
+fieldset {
+  margin-bottom: var(--spacing);
+  border: 0;
+}
+
+fieldset legend {
+  margin-bottom: var(--spacing);;
+  font-size: calc(var(--spacing) * 1.5);
+}
+
+fieldset input,
+fieldset select,
+fieldset textarea {
+  padding: calc(var(--spacing) / 2) 0;
+  width: 100%;
+  border: var(--border-regular);
+
+  background-color: var(--color-white);
+}
+
+fieldset input[type='checkbox'] {
+  margin-right: calc(var(--spacing) / 2);
+  width: auto;
+}
+
+.skraning-content {
+  display: flex;
+  flex-direction: row;
+  gap: calc(var(--spacing) * 1.5);
+  flex-wrap: wrap;
+}
+
+.label-box {
+  border: var(--border-regular);
+  border-radius: var(--border-radius-regular);
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.label-box:has(> .button-box) {
+  justify-content: space-between;
+}
+
+.form-box {
+  width: 100%;
+}
+
+.label-box div {
+  padding: calc(var(--spacing) / 2);
+}
 
 /* Takki */
 
